feat: cache routes
